# subject-drop-rearing

./: .gitattributes  .gitignore  DEPLOYMENT_README.md  README.md  gemini.md  pyproject.toml  requirements.txt
configs/: TEMPLATE.yaml  experiment_0_baseline.yaml  experiment_1_baseline.yaml  experiment_1_remove_expletives.yaml  experiment_2_baseline.yaml  experiment_2_impoverish_determiners.yaml  experiment_3_remove_articles.yaml  experiment_4_lemmatize_verbs.yaml  experiment_5_remove_subject_pronominals.yaml  experiment_6_impoverish_determiners_lemmatize_verbs.yaml  experiment_7_all_ablations.yaml  test_checkpoint_scheduling.yaml
docs/: checkpoint_scheduling.md  data_processing.md  new_checkpoint_scheduling.md  phase3_experimental_pipeline.md
evaluation/: run_blimp.py  surprisal.py
evaluation/stimuli/: subject_drop_stimuli.json
model_foundry/: __init__.py  cli.py  config.py  data.py  logging_utils.py  model.py  trainer.py  utils.py
model_foundry/tokenizer/: 00_train_tokenizer.py  __init__.py  tokenize_dataset.py
preprocessing/: 00_prepare_corpus.py  impoverish_determiners.py  lemmatize_verbs.py  project.md  remove_articles.py  remove_expletives.py  remove_subject_pronominals.py
scripts/: README.md  generate_checkpoint_schedule.py  run_ablation_experiment.sh  run_direct_full_pipeline.sh  run_direct_preprocess.sh  run_direct_tokenizer.sh  run_direct_training.sh  run_experiment.py  submit_experiment.sh
scripts/3070ti/: README.md  run_full_preprocessing.bat  run_preprocessing.bat  run_tokenization.bat  run_tokenizer.bat
scripts/a5000/: run_ablation_experiment.sh  submit_experiment.sh
scripts/p6000/: run_ablation_experiment.sh  run_ablation_experiment_simple.sh  run_ablation_experiment_simple_v2.sh  submit_experiment.sh  test.sh
singularity/: ablation.def  ablation.sif  training.def
tests/: test_checkpoint_scheduling.py  test_checkpoint_scheduling_simple.py  test_data_processing.py  test_new_checkpoint_scheduling.py
(+33 files in other folders)
